--- a/style.css
+++ b/style.css
@@ -1,7 +1,4 @@
-/* http://meyerweb.com/eric/tools/css/reset/
-   v2.0 | 20110126
-   License: none (public domain)
-*/
+
 
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -30,6 +27,7 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
+	/*margin-top: 60px;*/
 }
 ol, ul {
 	list-style: none;
@@ -47,13 +45,30 @@ table {
 	border-spacing: 0;
 }
 
-/*JUMBOTRON*/
-
 html,
 body,
 .block1 {
   height: 100%;
   width: 100%;
+}
+
+h1,h2,h3,h4,h5,h6 {
+	font-family: "Poppins";
+}
+
+p {
+	font-family: "Roboto";
+}
+
+.navbar-default {
+	font-family: "Poppins";
+	font-size: 18px;
+	background-color: #1B2631;
+	opacity: 0.75;
+}
+
+.nav-item {
+	padding: 0 65px;
 }
 
 .logo {
@@ -66,23 +81,40 @@ body,
 }
 
 .headline1 {
-	position:absolute;
+	position:;
 	top: 50%;
-	height 100px;
-	margin-top: 20%;
+	margin-top: 33%;
+	font-family: "Orbitron";
+	font-style: italic;
+	font-weight: 600;
+	font-size: 120px;
+	opacity: 0.9;
+	letter-spacing: 12px;
 }
 
+/*font-family: "Russo One";
+font-style: italic;*/
+/*
+font-family: "Orbitron";
+font-style:italic;*/
+
 .headline2 {
-	position:absolute;
+	position:;
 	top: 50%;
-	height 100px;
-	margin-top: 44%;
+	font-size: 32px;
+	font-family: "Orbitron";
+	font-style: italic;
+	font-weight: 400;
+	margin-top:;
+	letter-spacing: 7px;
+	opacity: 0.85;
 }
 
 .jumbotron {
   height: 100%;
-  background-image: url("img/jumbotron2.png");
+  background-image: url("img/showcar10dark.png");
 	border-radius: 0;
+	background-position: center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -94,8 +126,8 @@ body,
 }
 
 .card img {
-  height: 120px;
-  width: 120px;
+  width: 100%;
+	height: auto;
   margin: 0 auto;
 }
 
