--- a/style.css
+++ b/style.css
@@ -60,6 +60,47 @@ p {
 	font-family: "Roboto";
 }
 
+.polygon-wrapper {
+	width: 100%;
+	height: 400px;
+	margin: 100px ;
+}
+
+.polygon {
+	-webkit-clip-path: polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%);
+	clip-path: polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%);
+	width: 100%;
+	height: 100%;
+	margin-right: -85px;
+	padding: 5px;
+}
+
+.poly-1 {
+	background-color: #a5a5a5;
+}
+
+.poly-2 {
+	background-color: grey;
+}
+.poly-3 {
+	background-color: #525252;
+}
+.poly-4 {
+	background-color: #444444;
+}
+
+.polygon-card {
+	font-family: "Orbitron";
+	font-size: 28px;
+	margin-right: -20px;
+	margin-top: 150px;
+}
+
+
+
+
+
+
 .navbar-default {
 	font-family: "Poppins";
 	font-size: 18px;
